--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="profile" href="http://gmpg.org/xfn/11">
-  <title>Realiable7 Information Technology Service &#8211; My WordPress Blog</title>
+  <title>Realiable7 Information Technology Services &#8211; My WordPress Blog</title>
   <meta name='robots' content='max-image-preview:large' />
   <link rel='dns-prefetch' href='//fonts.googleapis.com' />
   <link rel="alternate" type="application/rss+xml" title="Realiable7 Information Technology Service &raquo; Feed"
     href="./feed/" />
   <link rel="alternate" type="application/rss+xml"
-    title="Realiable7 Information Technology Service &raquo; Comments Feed" href="./comments/feed/" />
+    title="Reliable7 Information Technology Services &raquo; Comments Feed" href="./comments/feed/" />
   <script type="text/javascript">
     window._wpemojiSettings = { "baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/72x72\/", "ext": ".png", "svgUrl": "https:\/\/s.w.org\/images\/core\/emoji\/14.0.0\/svg\/", "svgExt": ".svg", "source": { "concatemoji": ".\/wp-includes\/js\/wp-emoji-release.min.js?ver=6.2.2" } };
     /*! This file is auto-generated */
