--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="profile" href="http://gmpg.org/xfn/11">
-  <title>Realiable7 Information Technology Services &#8211; My WordPress Blog</title>
+  <title>Reliable7 Information Technology Services &#8211; My WordPress Blog</title>
   <meta name='robots' content='max-image-preview:large' />
   <link rel='dns-prefetch' href='//fonts.googleapis.com' />
   <link rel="alternate" type="application/rss+xml" title="Realiable7 Information Technology Service &raquo; Feed"
