--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Reliable7 Information Technology Services &#8211; My WordPress Blog</title>
   <meta name='robots' content='max-image-preview:large' />
   <link rel='dns-prefetch' href='//fonts.googleapis.com' />
-  <link rel="alternate" type="application/rss+xml" title="Realiable7 Information Technology Service &raquo; Feed"
+  <link rel="alternate" type="application/rss+xml" title="Reliable7 Information Technology Services &raquo; Feed"
     href="./feed/" />
   <link rel="alternate" type="application/rss+xml"
     title="Reliable7 Information Technology Services &raquo; Comments Feed" href="./comments/feed/" />
