--- a/index.html
+++ b/index.html
@@ -2210,8 +2210,8 @@
                           class="d-flex align-items-center text-lg-left text-md-left text-left justify-content-lg-start justify-content-md-start justify-content-start style-5 style-local-9-h5 position-relative h-element">
                           <!----> <a rel="home" href="./index.html" h-use-smooth-scroll="true"
                             class="d-flex align-items-center"><span
-                              class="h-logo__text h-logo__text_h logo-text d-inline-block style-5-text style-local-9-h5-text">Realiable7
-                              Information Technology Service</span></a> </div>
+                              class="h-logo__text h-logo__text_h logo-text d-inline-block style-5-text style-local-9-h5-text">ReliableSolutions7
+                              Information Technology Services</span></a> </div>
                       </div>
                     </div>
                   </div>
