--- a/index.html
+++ b/index.html
@@ -2287,7 +2287,7 @@
                             class="d-flex w-100 align-items-center h-button justify-content-lg-center justify-content-md-center justify-content-center style-334 style-local-9-h34 position-relative"><!----><!---->
                             <span>E-mail</span></a> </span><span
                           class="h-button__outer style-335-outer style-local-9-h35-outer d-inline-flex h-element"><a
-                            h-use-smooth-scroll="true" href="https://github.com/reliablesolutions7/reliablesolutions7.github.io/blob/main/Jerry%20T%20Joseph%20Resume.pdf" data-colibri-id="9-h35"
+                            h-use-smooth-scroll="true" href="https://drive.google.com/file/d/1mbsmfqr8zwmwK8TcnMNO2KHSpynBK-Ja/view?usp=share_link" data-colibri-id="9-h35"
                             class="d-flex w-100 align-items-center h-button justify-content-lg-center justify-content-md-center justify-content-center style-335 style-local-9-h35 position-relative"><!----><!---->
                             <span>Resume</span></a> </span> </div>
                     </div>
